[gd_scene load_steps=5 format=3 uid="uid://wbol7hk1scja"]

[ext_resource type="Script" path="res://UI/SubViewportPaint/painting_interface_subviewport_manager.gd" id="1_iqtp6"]
[ext_resource type="Script" path="res://UI/SubViewportPaint/tools_panel_viewport.gd" id="2_q1kk4"]
[ext_resource type="Script" path="res://UI/SubViewportPaint/viewport_paint_manager.gd" id="3_hsb25"]
[ext_resource type="Script" path="res://UI/SubViewportPaint/Painter_viewport.gd" id="4_kk62g"]

[node name="PaintInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqtp6")

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ToolsPanel" type="PanelContainer" parent="MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 250)
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("2_q1kk4")

[node name="Tools" type="VBoxContainer" parent="MainContainer/HBoxContainer/ToolsPanel"]
layout_mode = 2

[node name="LabelBrushSize" type="Label" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Brush size: 32px"
horizontal_alignment = 1

[node name="HScrollBrushSize" type="HScrollBar" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 2.0
step = 2.0
value = 32.0

[node name="LabelColorPicker" type="Label" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Current color"
horizontal_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 1.75

[node name="UndoButton" type="Button" parent="MainContainer/HBoxContainer/ToolsPanel/Tools/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Undo"

[node name="RedoButton" type="Button" parent="MainContainer/HBoxContainer/ToolsPanel/Tools/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
disabled = true
text = "Redo"

[node name="ClearButton" type="Button" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
custom_minimum_size = Vector2(25, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "Clear"

[node name="SaveButton" type="Button" parent="MainContainer/HBoxContainer/ToolsPanel/Tools"]
custom_minimum_size = Vector2(25, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Save"

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
stretch = true
script = ExtResource("3_hsb25")

[node name="SubViewport" type="SubViewport" parent="MainContainer/HBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
msaa_2d = 2
size = Vector2i(500, 500)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Painter" type="Control" parent="MainContainer/HBoxContainer/SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_kk62g")

[node name="SaveFileDialog" type="FileDialog" parent="."]
size = Vector2i(392, 159)

[connection signal="value_changed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/HScrollBrushSize" to="MainContainer/HBoxContainer/ToolsPanel" method="_on_h_scroll_brush_size_value_changed"]
[connection signal="value_changed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/HScrollBrushSize" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_h_scroll_brush_size_value_changed"]
[connection signal="color_changed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/ColorPickerButton" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/HBoxContainer/UndoButton" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_undo_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/HBoxContainer/RedoButton" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_redo_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/ClearButton" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_clear_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ToolsPanel/Tools/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="added_to_redo" from="MainContainer/HBoxContainer/SubViewportContainer" to="MainContainer/HBoxContainer/ToolsPanel" method="_on_added_to_redo"]
[connection signal="emptied_redo" from="MainContainer/HBoxContainer/SubViewportContainer" to="MainContainer/HBoxContainer/ToolsPanel" method="_on_emptied_redo"]
[connection signal="mouse_entered" from="MainContainer/HBoxContainer/SubViewportContainer" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/HBoxContainer/SubViewportContainer" to="MainContainer/HBoxContainer/SubViewportContainer" method="_on_mouse_exited"]
